--- a/docs/partner_editable/deploy_steps.adoc
+++ b/docs/partner_editable/deploy_steps.adoc
@@ -6,15 +6,13 @@
 
 // Optional based on Marketplace listing. Not to be edited
 ifdef::marketplace_subscription[]
-=== Subscribe to the {partner-product-name} AMI(s)
+=== Subscribe to one or more {partner-product-name} AMIs
 
-This Quick Start requires a subscription to one or more of the following AMIs available in AWS Marketplace
+This Quick Start requires a subscription to one or more of the following AMIs available in AWS Marketplace:
 
 *	If your deployment will contain on-demand instances, subscribe to the https://aws.amazon.com/marketplace/pp/B00PCZSWDA[Fortinet FortiGate Next-Generation Firewall] AMI.
 *	If your deployment will contain BYOL instances, subscribe to the https://aws.amazon.com/marketplace/pp/B00ISG1GUG[Fortinet FortiGate (BYOL) Next-Generation Firewall] AMI.
 *	If your deployment will integrate with FortiAnalyzer, subscribe to the https://aws.amazon.com/marketplace/pp/B07Q1F19SC[FortiAnalyzer Centralized Logging/Reporting (10 managed devices)] AMI.
-
-//-
 
 . Sign in to your AWS account.
 . For each AMI you will subscribe to, open the page for the AMI in AWS Marketplace and choose *Continue to Subscribe*.
@@ -27,10 +25,10 @@ If your deployment will contain BYOL instances:
 
 .	Navigate to the GitHub repository for the Quick Start and download the repository.
 .	Unzip the file on your local machine.
-.	Create an S3 bucket for your deployment. The name of the S3 bucket will be used for the parameter Quick Start S3 bucket name. 
-.	Inside this folder, create another folder to store the deployment resources. The name of this folder will be used for the parameter Quick Start S3 key prefix.
-.	Navigate to this second folder and upload the files and folders you extracted in step 2 to this location.
-.	Navigate to the assets folder, create a folder named `fgt-asg-license`, and upload your FortiGate license file(s) to this folder.
+.	Create an S3 bucket for your deployment. The name of the S3 bucket is used for the parameter *Quick Start S3 bucket name* (`QSS3BucketName`). This name can include numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-). 
+.	Inside this directory, create another directory to store the deployment resources. The name of this directory is used for the parameter *Quick Start S3 key prefix* (`QSS3KeyPrefix`). The S3 key prefix can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slash (/).
+.	Navigate to this second directory and upload the files and directories you extracted in step 2 to this location.
+.	Navigate to the assets directory, create a directory named `fgt-asg-license`, and upload your FortiGate license files to this directory.
 
 
 endif::marketplace_subscription[]
@@ -44,17 +42,14 @@ NOTE: You are responsible for the cost of the AWS services used while running th
 
 [cols="60,40a"]
 |===
-^|http://qs_launch_link[Deploy {partner-product-name} into a new VPC on AWS^] 
-^|link:=../../templates/oracle-database-master.template.yaml[View template^]
-^|http://qs_launch_link[Deploy {partner-product-name} into an existing VPC on AWS^] 
-^|link:=../../templates/oracle-database.template.yaml[View template^]
+^|https://fwd.aws/zkV8P[Deploy {partner-product-name} into a new VPC on AWS^] 
+^|https://fwd.aws/6nDP6[View template^]
+^|https://fwd.aws/gwdmk[Deploy {partner-product-name} into an existing VPC on AWS^] 
+^|https://fwd.aws/xw5QN[View template^]
 |===
-//TODO Shivansh, are these the right links ("oracle-database.template" etc.)?
-//TODO Shivansh, Do we want "View template" links here? This is where we put the "Deploy" links.
 
-WARNING: If you’re deploying {partner-product-name} into an existing VPC, make sure that your VPC has two private subnets in different Availability Zones for the workload instances, and that the subnets aren’t shared. This Quick Start doesn’t support https://docs.aws.amazon.com/vpc/latest/userguide/vpc-sharing.html[shared subnets^]. These subnets require https://docs.aws.amazon.com/vpc/latest/userguide/vpc-nat-gateway.html[NAT gateways^] in their route tables, to allow the instances to download packages and software without exposing them to the internet.
 
-Also, make sure that the domain name option in the DHCP options is configured as explained in the http://docs.aws.amazon.com/AmazonVPC/latest/UserGuide/VPC_DHCP_Options.html[Amazon VPC documentation^]. You provide your VPC settings when you launch the Quick Start.
+WARNING: If you’re deploying {partner-product-name} into an existing VPC, make sure that your VPC has two private subnets in different Availability Zones for the workload instances, and that the subnets aren’t shared. This Quick Start doesn’t support https://docs.aws.amazon.com/vpc/latest/userguide/vpc-sharing.html[shared subnets^]. These subnets require https://docs.aws.amazon.com/vpc/latest/userguide/vpc-nat-gateway.html[NAT gateways^] in their route tables, to allow the instances to download packages and software without exposing them to the internet. Also make sure that the domain name option in the DHCP options is configured as explained in the http://docs.aws.amazon.com/AmazonVPC/latest/UserGuide/VPC_DHCP_Options.html[Amazon VPC documentation^]. You provide your VPC settings when you launch the Quick Start.
 
 Each deployment takes about {deployment_time} to complete.
 
@@ -65,4 +60,4 @@ Each deployment takes about {deployment_time} to complete.
 
 [start=3]
 . On the *Create stack* page, keep the default setting for the template URL, and then choose *Next*.
-. On the *Specify stack details* page, change the stack name if needed. Review the parameters for the template. Provide values for the parameters that require input. For all other parameters, review the default settings and customize them as necessary. For details on each parameter, see the link:#_parameter_reference[Parameter reference] section of this guide.
+. On the *Specify stack details* page, change the stack name if needed. Review the parameters for the template. Provide values for the parameters that require input. For all other parameters, review the default settings and customize them as necessary. For details on each parameter, see the link:#_parameter_reference[Parameter reference] section of this guide. When you finish reviewing and customizing the parameters, choose *Next*.
