More deployment-guide edits, incl. parameter descriptions

--- a/docs/partner_editable/additional_info.adoc
+++ b/docs/partner_editable/additional_info.adoc
@@ -84,7 +84,7 @@ image::../images/post_deployment_2.png[post_deployment_2,width=648,height=439]
 
 *	*The `assets/configset` directory in the S3 bucket:* This directory contains the following files that are loaded as the initial configuration for a new FortiGate instance.
 **	`baseconfig` is the base configuration. This file can be modified as needed to meet your network requirements. Placeholders such as {SYNC_INTERFACE} are explained in the "Configset placeholders" table that follows.
-**	`httproutingpolicy` and `httpsroutingpolicy` are provided as part of the base `configset` - for a common use case - and specify the FortiGate firewall policy for virtual IP addresses (VIPs) for http routing and https routing respectively. This common use case includes a VIP on port 80 and a VIP on port 443 with a policy that points to an internal load balancer. The port numbers are configurable and can be changed during CFT deployment. Additional VIPs can be added here as needed. Note that in FortiOS 6.2.3, any VIPs created on the main instance do not sync to the secondary units. Any VIP you wish to add must be added as part of the base configuration. If you set the internal Elastic Load Balancing (ELB) options parameter to “do not need one,” append your VIP configuration to `baseconfig`.
+**	`httproutingpolicy` and `httpsroutingpolicy` specify the FortiGate firewall policy for virtual IP addresses (VIPs) for http routing and https routing, respectively. They're provided as part of the base `configset`for a common use case. This use case includes a VIP on port 80 and a VIP on port 443 with a policy that points to an internal load balancer. The port numbers are configurable and can be changed during CFT deployment. Additional VIPs can be added here as needed. Note that in FortiOS 6.2.3, any VIPs created on the main instance do not sync to the secondary units. Any VIP you wish to add must be added as part of the base configuration. If you set the `InternalLoadBalancingOptions` parameter to *Do not need one*, append your VIP configuration to `baseconfig`.
 ** (Optional) The `assets/fgt-asg-license` directory in the S3 bucket contains BYOL license files.
 
 *	*The tables in DynamoDB:* These tables are required to store information such as health-check monitoring, main-instance election, and state transitions. Do not modify these records unless required for troubleshooting purposes.
