--- a/docs/partner_editable/service_limits.adoc
+++ b/docs/partner_editable/service_limits.adoc
@@ -5,7 +5,7 @@
 // Space needed to maintain table headers
 |VPCs |1
 |Elastic IP addresses | 1
-|AWS security groups | 3
+|Security groups | 3
 |IAM roles |7
 |Auto Scaling groups | 2
 |Network Load Balancers | 2
