--- a/docs/partner_editable/additional_info.adoc
+++ b/docs/partner_editable/additional_info.adoc
@@ -22,7 +22,7 @@ image::../images/test_deployment_1.png[test_deployment_1,width=648,height=439]
 [link=images/test_deployment_2.png]
 image::../images/test_deployment_2.png[test_deployment_2,width=648,height=439]
 +
-.	Confirm that a master instance was elected.
+.	Confirm that a primary instance was elected.
 Look up the DynamoDB table <ResourceTagPrefix>-FortiGateMasterElection. Select the Items tab and open the master record (the only item listed). A master has been elected when the voteState is done.
  +
 :xrefstyle: short
@@ -37,7 +37,7 @@ TIP:     Make note of the instanceID as you will need it to connect to the maste
 == Post deployment steps
 // If Post-deployment steps are required, add them here. If not, remove the heading
 
-=== Connect to the master FortiGate instance
+=== Connect to the Primary FortiGate instance
 
 To connect to the master FortiGate instance you will need a login URL, a username, and a password.
 
