--- a/docs/partner_editable/regions.adoc
+++ b/docs/partner_editable/regions.adoc
@@ -1,1 +1,8 @@
-This deployment includes *AWS Auto Scaling,* which isn’t currently supported in all AWS Regions. For a current list of supported Regions, see https://docs.aws.amazon.com/general/latest/gr/aws-service-information.html[Service Endpoints and Quotas] in the AWS documentation.
+This Quick Start supports the following Regions:
+
+* us-east-1, US East (N. Virginia)
+* us-east-2, US East (Ohio)
+* us-west-2, US West (Oregon)
+* eu-central-1, Europe (Frankfurt)
+* ca-central-1, Canada (Central)
+* ap-south-1, Asia Pacific (Mumbai)
