--- a/docs/partner_editable/product_description.adoc
+++ b/docs/partner_editable/product_description.adoc
@@ -4,24 +4,4 @@
 
 FortiGate midrange next-generation firewalls (NGFWs) provide high-performance, multilayered advanced security and better visibility to protect against cyberattacks while reducing complexity. FortiGate firewalls are built with security processors to enable threat protection and performance for Secure Sockets Layer (SSL)-encrypted traffic.
 
-//TODO Shivansh, Is NGFW an acronym people might search on? If so, add it to our landing page? If not, deleted it in this guide?
-
-By providing granular visibility of applications, users, and Internet of Things (IoT) devices, these firewalls are designed to identify issues quickly and intuitively. Our security services from FortiGuard Labs provide continuous threat intelligence updates to keep organizations protected from the following:
-
-*	Exploits and encrypted malware
-*	Malicious websites and botnets
-*	Ransomware and unknown attacks
-
-//TODO Shivansh, How can we rephrase "granular visibility" and "quickly and intuitively" to describe this more scientifically?
-
-FortiGate midrange next-generation firewalls include:
-
-*	Top-rated security validated by NSS Labs, Virus Bulletin, and AV Comparatives
-*	Industry’s highest threat protection and SSL inspection performance
-*	Multilayered security capabilities to reduce complexity
-*	Deep visibility and granular control of applications, users, and IoT devices
-*	Single-pane-of-glass view with centralized management and reporting
-*	An Auto Scaling group to provide efficient clustering at times of high workloads
-
-Multiple FortiGate instances can be scaled out automatically according to predefined workload levels. When a spike in traffic occurs, the Lambda script is invoked to scale out the group by automatically adding FortiGate instances. Auto Scaling is achieved by using FortiGate-native high-availability features. For example, Config-Sync synchronizes operating system configurations across multiple FortiGate instances at the time of scale-out events.
-
+Multiple FortiGate instances form an Auto Scaling group to provide efficient clustering at times of high workloads. FortiGate instances can be scaled out automatically according to predefined workload levels. When a spike in traffic occurs, FortiGate instances are automatically added to the Auto Scaling group. Auto Scaling is achieved by using FortiGate-native high-availability (HA) features that synchronize operating-system (OS) configurations across multiple FortiGate-VM instances at the time of scale-out events.
