--- a/docs/partner_editable/_settings.adoc
+++ b/docs/partner_editable/_settings.adoc
@@ -1,11 +1,11 @@
 :quickstart-project-name: quickstart-fortinet-fortigate
-:partner-product-name: FortiGate Auto Scaling
+:partner-product-name: FortiGate Auto Scaling With FortiAnalyzer
 :partner-company-name: Fortinet, Inc.
 :doc-month: November
 :doc-year: 2020
 :partner-contributors: Kimberly Lee, Jayden Liang, Daniel Chao, and Jamie Pate, {partner-company-name}
 :quickstart-contributors: Shivansh Singh and Tony Bulding, AWS Quick Start team
-:deployment_time: 15 minutes
+:deployment_time: 10 minutes
 :default_deployment_region: us-east-2
 :parameters_as_appendix:
 // Uncomment these two attributes if you are leveraging
