--- a/docs/partner_editable/licenses.adoc
+++ b/docs/partner_editable/licenses.adoc
@@ -1,14 +1,11 @@
 // Include details about the license and how they can sign up. If no license is required, clarify that. 
 
-This Quick Start can deploy FortiGate on-demand or bring-your-own-license (BYOL) instances. You pay an hourly fee based on the Amazon Elastic Compute Cloud (Amazon EC2) instance type. A license is required for each FortiGate BYOL instance you might use. Licenses can be purchased from FortiCare. When you launch the Quick Start, place the license key in an S3 bucket and specify its location. For instructions, see step 3 in the deployment section.
-//TODO Marcia's note to self: Confirm this step number before we publish. Create a link like the one below?
+This Quick Start can deploy FortiGate on-demand or bring-your-own-license (BYOL) instances. You pay an hourly fee based on the Amazon Elastic Compute Cloud (Amazon EC2) instance type. A license is required for each FortiGate BYOL instance you might use. Licenses can be purchased from FortiCare. If your deployment will contain BYOL instances, place the license key in an S3 bucket and provide the bucket name (`QSS3BucketName`) when you launch the stack. For instructions, see the link:#_deployment_steps[Deployment steps] section of this guide.
 
 // Or, if the deployment uses an AMI, update this paragraph. If it doesn’t, remove the paragraph.
 
 This Quick Start requires a subscription to one or more of the following AMIs available in AWS Marketplace:
 
-* If your deployment will contain On-Demand instances, subscribe to the https://aws.amazon.com/marketplace/pp/B00PCZSWDA[Fortinet FortiGate Next-Generation Firewall^] AMI.
+* If your deployment will contain on-demand instances, subscribe to the https://aws.amazon.com/marketplace/pp/B00PCZSWDA[Fortinet FortiGate Next-Generation Firewall^] AMI.
 * If your deployment will contain BYOL instances, subscribe to the https://aws.amazon.com/marketplace/pp/B00ISG1GUG[Fortinet FortiGate (BYOL) Next-Generation Firewall^] AMI.
-* If your deployment will integrate with FortiAnalyzer, subscribe to the https://aws.amazon.com/marketplace/pp/B07Q1F19SC[FortiAnalyzer Centralized Logging/Reporting (10 managed devices)^] AMI.
-
-If your deployment will contain BYOL instances, you must place the license in an S3 bucket and provide the bucket name as parameter when launching the stack.
+* If your deployment will integrate FortiAnalyzer, subscribe to the https://aws.amazon.com/marketplace/pp/B07Q1F19SC[FortiAnalyzer Centralized Logging/Reporting (10 managed devices)^] AMI.
