--- a/docs/partner_editable/overview_target_and_usage.adoc
+++ b/docs/partner_editable/overview_target_and_usage.adoc
@@ -2,8 +2,6 @@
 // Identify your target audience and explain how/why they would use this Quick Start.
 //Avoid borrowing text from third-party websites (copying text from AWS service documentation is fine). Also, avoid marketing-speak, focusing instead on the technical aspect.
 
-This guide provides step-by-step instructions for deploying the Fortinet {partner-product-name} Quick Start reference architecture on the AWS Cloud. By integrating FortiAnalyzer, this reference architecture provides consolidated logging and reporting for your FortiGate cluster.
+This guide provides instructions for deploying the Fortinet {partner-product-name} Quick Start reference architecture on the AWS Cloud. 
 
-//TODO Shivansh, The landing page and the previous deployment guide include the term "baseline" in the title of the reference architecture. Do we need that word here too? (If not, remove from landing page title too?)
-
-This Quick Start is for users who plan to implement or extend Fortinet’s Security Fabric workloads on the AWS Cloud, including IT infrastructure architects, administrators, and DevOps professionals.
+This Quick Start is for IT infrastructure architects, administrators, DevOps professionals, and others who plan to implement or extend Fortinet’s Security Fabric workloads on the AWS Cloud.
