--- a/docs/partner_editable/product_description.adoc
+++ b/docs/partner_editable/product_description.adoc
@@ -4,4 +4,6 @@
 
 FortiGate midrange next-generation firewalls (NGFWs) provide high-performance, multilayered advanced security and better visibility to protect against cyberattacks while reducing complexity. FortiGate firewalls are built with security processors to enable threat protection and performance for Secure Sockets Layer (SSL)-encrypted traffic.
 
-Multiple FortiGate instances form an Auto Scaling group to provide efficient clustering at times of high workloads. FortiGate instances can be scaled out automatically according to predefined workload levels. When a spike in traffic occurs, FortiGate instances are automatically added to the Auto Scaling group. Auto Scaling is achieved by using FortiGate-native high-availability (HA) features that synchronize operating-system (OS) configurations across multiple FortiGate-VM instances at the time of scale-out events.
+Multiple FortiGate instances form an Amazon EC2 Auto Scaling group to provide efficient clustering at times of high workloads. FortiGate instances can be scaled out automatically according to predefined workload levels. When a spike in traffic occurs, FortiGate instances are automatically added to the Amazon EC2 Auto Scaling group. EC2 Auto Scaling is achieved by using FortiGate-native high-availability (HA) features that synchronize operating-system (OS) configurations across multiple FortiGate-VM instances at the time of scale-out events.
+
+By integrating FortiAnalyzer, this reference architecture provides consolidated logging and reporting for your FortiGate cluster.
