--- a/docs/partner_editable/architecture.adoc
+++ b/docs/partner_editable/architecture.adoc
@@ -20,9 +20,9 @@ best practices, to provide you with your own virtual network on AWS.*
 
 ** A FortiAnalyzer instance, which consolidates logging and reporting for your FortiGate cluster.
 
-** An Amazon EC2 Auto Scaling group that contains a FortiGate main instance of the BYOL licensing model.
+** An Amazon EC2 Auto Scaling group that contains a FortiGate main instance with a BYOL license.
 
-** An Amazon EC2 Auto Scaling group that contains a FortiGate host of the on-demand licensing model. This group complements security groups (not shown). This host provides intrusion protection, web filtering, and threat detection to help protect your services from cyberattacks. It also allows VPN access by authorized users.
+** An Amazon EC2 Auto Scaling group that contains a FortiGate host with an on-demand license. This group complements security groups (not shown). This host provides intrusion protection, web filtering, and threat detection to help protect your services from cyberattacks. It also allows VPN access by authorized users.
 
 * In the private subnets:
 
